[package]
name = "geps-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1", features = ["canvas", "tokio", "advanced"] }
plotters-iced = "0.11"
plotters = { version = "0.3", default-features = false, features = [
    "chrono",
    "area_series",
    "line_series",
    "point_series",
] }
rand = "0.9.0"
chrono = "0.4.40"
csv = "1.3.1"
rfd = "0.15.2"
bincode = "2.0.1"
serialport = "4.7.1"

[dependencies.pmbus-types-rs]
git = "https://github.com/starboundstitch/pmbus-types-rs"
